Another version, done by Mr patrik Knowles

--- a/mainpage.html
+++ b/mainpage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Mini Project Four</title>
+    <title> My Mini-Project-Four</title>
 
     <!-- required meta tags-->
 	<meta charset="utf-8">
