Chaanges after meeting in October

--- a/mini.project.1.html
+++ b/mini.project.1.html
@@ -1,7 +1,7 @@
 <!doctype>
 <html>
      <head>
-	      <title>Mini Project One</title>
+	      <title>My Mini Project One</title>
 		  <meta charset="UTF-8"/>
 		  <meta name="keywords" content="secondary schools, scholarships, quality education, schools in lagos, schools in nigeria."/>
 		  <meta name="description" content="we offer quality education across all levels of college education, committed to ensuring our students thrive in a safe and healthy environment while delivering an exceptional educational experience."/>
@@ -27,7 +27,7 @@
 				</div>
 				
 				</div>
-				<hr size="5" color="rainbow" width="100%">
+				<hr size="5" color="rainbow" width="101%">
 				
 				<h2 style="font-size:40; color:green">A Warm Welcome</h2>
 				<img src="../images/project1 image12.jpg" width="1333" height="500" align="center"> 
